--- a/index.html
+++ b/index.html
@@ -427,11 +427,11 @@
             <div class="menu" id="nav-menu">
                 <a href="index.html">Home</a>
                 <a href="blogs.html">Blogs</a>
-                <a href="calculator.html">Calculator</a>
+                <a href="https://sherazahmed2.github.io/Quick2ools/calculator.html">Calculator</a>
                
-                <a href="scientific-calculator.html">Scientific Calculator</a>
-                <a href="currency-converter.html">Currency Converter</a>
-                <a href="todo.html">To-Do List</a>
+                <a href="https://sherazahmed2.github.io/Quick2ools/scientific-calculator.html">Scientific Calculator</a>
+                <a href="https://sherazahmed2.github.io/Quick2ools/currency-converter.html">Currency Converter</a>
+                <a href="https://sherazahmed2.github.io/Quick2ools/todo.html">To-Do List</a>
                 <a href="about.html">About Us</a>
                 <a href="contact.html">Contact Us</a>
                 <a href="privacy.html">Privacy Policy</a>
