--- a/index.html
+++ b/index.html
@@ -422,19 +422,19 @@
 <body>
     <nav class="nav">
         <div class="nav-inner">
-            <a class="brand" href="index.html">Quick2ools</a>
+            <a class="brand" href="https://sherazahmed2.github.io/Quick2ools/">Quick2ools</a>
             <button class="menu-toggle" aria-label="Toggle navigation" onclick="document.querySelector('.menu').classList.toggle('open')">Menu</button>
             <div class="menu" id="nav-menu">
-                <a href="index.html">Home</a>
-                <a href="blogs.html">Blogs</a>
+                <a href="<a href="https://sherazahmed2.github.io/Quick2ools/">Home</a>l">Home</a>
+                <a href="https://sherazahmed2.github.io/Quick2ools/blogs.html">Blogs</a>
                 <a href="https://sherazahmed2.github.io/Quick2ools/calculator.html">Calculator</a>
                
                 <a href="https://sherazahmed2.github.io/Quick2ools/scientific-calculator.html">Scientific Calculator</a>
                 <a href="https://sherazahmed2.github.io/Quick2ools/currency-converter.html">Currency Converter</a>
                 <a href="https://sherazahmed2.github.io/Quick2ools/todo.html">To-Do List</a>
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact Us</a>
-                <a href="privacy.html">Privacy Policy</a>
+                <a href="https://sherazahmed2.github.io/Quick2ools/about.html">About Us</a>
+                <a href="<a href="https://sherazahmed2.github.io/Quick2ools/contact.html">Contact</a>">Contact Us</a>
+                <a href="<a href="https://sherazahmed2.github.io/Quick2ools/privacy.html">Privacy</a>">Privacy Policy</a>
             </div>
         </div>
     </nav>
@@ -464,35 +464,35 @@
                     <div class="card-icon">🚀</div>
                     <h2>Getting Started</h2>
                     <p>Use the navigation to explore pages. Each page is a self-contained HTML file with inline CSS and JavaScript, making it easy to paste into Blogger Pages. Perfect for bloggers who want to add interactive features to their site.</p>
-                    <a class="read-more" href="about.html">Explore the story →</a>
+                    <a class="read-more" href="https://sherazahmed2.github.io/Quick2ools/about.html">Explore the story →</a>
                 </article>
                 <article class="card feature-card accent-2">
                     <div class="card-icon">💱</div>
                     <h2>Currency Converter</h2>
                     <p>Convert between currencies using live exchange rates. Fast, accurate, and ideal for travelers or sellers working with international clients.</p>
-                    <a class="read-more" href="currency-converter.html">Try converter →</a>
+                    <a class="read-more" href="https://sherazahmed2.github.io/Quick2ools/currency-converter.html">Try converter →</a>
                 </article>
                 <article class="card feature-card accent-3">
                     <div class="card-icon">✅</div>
                     <h2>To-Do List Manager</h2>
                     <p>Create tasks, mark them done, and keep everything saved locally in your browser. Stay organized with a lightweight, distraction-free tool.</p>
-                    <a class="read-more" href="todo.html">Open to-do list →</a>
+                    <a class="read-more" href="https://sherazahmed2.github.io/Quick2ools/todo.html">Open to-do list →</a>
                 </article>
                 <article class="card feature-card accent-4">
                     <div class="card-icon">🔢</div>
                     <h2>Calculator Suite</h2>
                     <p>Access both basic and scientific calculators for every kind of calculation—from simple arithmetic to advanced trigonometry.</p>
-                    <a class="read-more" href="calculator.html">Launch calculators →</a>
+                    <a class="read-more" href="https://sherazahmed2.github.io/Quick2ools/calculator.html">Launch calculators →</a>
                 </article>
             </div>
             <aside class="sidebar">
                 <div class="card">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="calculator.html">Basic Calculator</a></li>
-                        <li><a href="scientific-calculator.html">Scientific Calculator</a></li>
-                        <li><a href="currency-converter.html">Currency Converter</a></li>
-                        <li><a href="todo.html">To-Do List</a></li>
+                        <li><a href="https://sherazahmed2.github.io/Quick2ools/calculator.html">Basic Calculator</a></li>
+                        <li><a href="https://sherazahmed2.github.io/Quick2ools/scientific-calculator.html">Scientific Calculator</a></li>
+                        <li><a href="https://sherazahmed2.github.io/Quick2ools/currency-converter.html">Currency Converter</a></li>
+                        <li><a href="https://sherazahmed2.github.io/Quick2ools/todo.html">To-Do List</a></li>
                     </ul>
                 </div>
             </aside>
@@ -501,11 +501,11 @@
 
     <footer>
         <div style="max-width:1100px;margin:0 auto;padding:0 16px;display:flex;flex-wrap:wrap;gap:12px;justify-content:center;align-items:center;">
-            <a href="about.html" style="color:#cbd5e1;">About</a>
+            <a href="https://sherazahmed2.github.io/Quick2ools/about.html" style="color:#cbd5e1;">About</a>
             <span>•</span>
-            <a href="contact.html" style="color:#cbd5e1;">Contact</a>
+            <a href="https://sherazahmed2.github.io/Quick2ools/contact.html" style="color:#cbd5e1;">Contact</a>
             <span>•</span>
-            <a href="privacy.html" style="color:#cbd5e1;">Privacy</a>
+            <a href="https://sherazahmed2.github.io/Quick2ools/privacy.html" style="color:#cbd5e1;">Privacy</a>
             <span>•</span>
             <a href="https://youtube.com/@game_kylie?si=OfRyNZBgbcXRecjK" target="_blank" rel="noopener" style="color:#93c5fd;">YouTube</a>
         </div>
