--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 <body>
     <nav class="nav">
         <div class="nav-inner">
-            <a class="brand" href="https://sherazahmed2.github.io/Quick2ools/"Quick2ools</a>
+            <a class="brand" href="https://sherazahmed2.github.io/Quick2ools/">Quick2ools</a>
             <button class="menu-toggle" aria-label="Toggle navigation" onclick="document.querySelector('.menu').classList.toggle('open')">Menu</button>
             <div class="menu" id="nav-menu">
                 <a href="<a href="https://sherazahmed2.github.io/Quick2ools/">Home</a>
