--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             <a class="brand" href="https://sherazahmed2.github.io/Quick2ools/">Quick2ools</a>
             <button class="menu-toggle" aria-label="Toggle navigation" onclick="document.querySelector('.menu').classList.toggle('open')">Menu</button>
             <div class="menu" id="nav-menu">
-                <a href="<a href="https://sherazahmed2.github.io/Quick2ools/">Home</a>
+                <a href="href="https://sherazahmed2.github.io/Quick2ools/">Home</a>
                 <a href="https://sherazahmed2.github.io/Quick2ools/blogs.html">Blogs</a>
                 <a href="https://sherazahmed2.github.io/Quick2ools/calculator.html">Calculator</a>
                
@@ -433,8 +433,8 @@
                 <a href="https://sherazahmed2.github.io/Quick2ools/currency-converter.html">Currency Converter</a>
                 <a href="https://sherazahmed2.github.io/Quick2ools/todo.html">To-Do List</a>
                 <a href="https://sherazahmed2.github.io/Quick2ools/about.html">About Us</a>
-                <a href="<a href="https://sherazahmed2.github.io/Quick2ools/contact.html">Contact Us</a>
-                <a href="<a href="https://sherazahmed2.github.io/Quick2ools/privacy.html">Privacy Policy</a>
+                <a href="https://sherazahmed2.github.io/Quick2ools/contact.html">Contact Us</a>
+                <a href="https://sherazahmed2.github.io/Quick2ools/privacy.html">Privacy Policy</a>
             </div>
         </div>
     </nav>
