--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             <a class="brand" href="https://sherazahmed2.github.io/Quick2ools">Quick2ools</a>
             <button class="menu-toggle" aria-label="Toggle navigation" onclick="document.querySelector('.menu').classList.toggle('open')">Menu</button>
             <div class="menu" id="nav-menu">
-                <a href="href="https://sherazahmed2.github.io/Quick2ools">Home</a>
+                <a href="https://sherazahmed2.github.io/Quick2ools">Home</a>
                 <a href="https://sherazahmed2.github.io/Quick2ools/blogs.html">Blogs</a>
                 <a href="https://sherazahmed2.github.io/Quick2ools/calculator.html">Calculator</a>
                
