--- a/blogs.html
+++ b/blogs.html
@@ -216,7 +216,7 @@
             <h2>All Blogs</h2>
         <ul>
             <li>
-                <a href="blogs/my-frist.html
+                <a href="blogs/my-frist.html">Demon Slayer</a>
             </li>
         </ul>
         </div>
@@ -268,5 +268,6 @@
     </script>
 </body>
 </html>
+
 
 
